# myfilms-back

./: .style.yapf  README.md  myfilms.drawio  pyproject.toml
deploy/: Dockerfile
myfilms/: config.py  database.py  main.py  models.py
tests/: conftest.py  data.py  films.py  test_film.py  test_films.py
