[tool.poetry]
name = "myfilms"
version = "0.1.0"
description = ""
authors = ["Ludovic CHAPELET <ludovic.chapelet@outlook.com>"]
readme = "README.md"
packages = [{include = "myfilms"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pycodestyle = "^2.10.0"
yapf = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"